Accept CORS requests

--- a/src/fail2panel-rest/stack.yaml
+++ b/src/fail2panel-rest/stack.yaml
@@ -40,7 +40,7 @@ packages:
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
 extra-deps:
-- archive: /home/timothy/prog/python-pickle/dist-newstyle/sdist/python-pickle-0.2.3.tar.gz
+- archive: /home/t.copeland/prog/personal/python-pickle/dist-newstyle/sdist/python-pickle-0.2.3.tar.gz
 #  - git: https://github.com/tacopeland/python-pickle.git
 #commit: cd5abf0d01bfe790df0e5ebcb44dbad71ea30f54
 
