--- a/src/fail2panel-rest/fail2panel-rest.cabal
+++ b/src/fail2panel-rest/fail2panel-rest.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.4.
+-- This file has been generated from package.yaml by hpack version 0.35.4.
 --
 -- see: https://github.com/sol/hpack
 
@@ -40,6 +40,7 @@ library
     , servant-server
     , text
     , wai
+    , wai-cors
     , warp
   default-language: Haskell2010
 
@@ -62,6 +63,7 @@ executable fail2panel-rest-exe
     , servant-server
     , text
     , wai
+    , wai-cors
     , warp
   default-language: Haskell2010
 
@@ -88,5 +90,6 @@ test-suite fail2panel-rest-test
     , servant-server
     , text
     , wai
+    , wai-cors
     , warp
   default-language: Haskell2010
